Sec52_Chap466-XXX-NOK: optimized code