@@ -11,6 +11,7 @@ import guru.springframework.spring6restmvc.repositories.CustomerRepository;
 import guru.springframework.spring6restmvc.services.BeerCsvService;
 import guru.springframework.spring6restmvcapi.model.BeerStyle;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.boot.CommandLineRunner;
@@ -22,14 +23,14 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 
 /**
- * Created by jt, Spring Framework Guru.
+ * Modified by Pierrot on 2024-10-11.
  */
+@Slf4j
 @Component
 @RequiredArgsConstructor
 public class BootstrapData implements CommandLineRunner {
@@ -49,11 +50,14 @@ public class BootstrapData implements CommandLineRunner {
 
     private void loadOrderData() {
         if (beerOrderRepository.count() == 0) {
+            // check all customers and beers
             val customers = customerRepository.findAll();
             val beers = beerRepository.findAll();
 
+            // Iterator on  Beer List
             val beerIterator = beers.iterator();
 
+            // Iterate on all Customers, set their BeerOrder and save them
             customers.forEach(customer -> {
 
                 beerOrderRepository.save(BeerOrder.builder()
@@ -76,6 +80,7 @@ public class BootstrapData implements CommandLineRunner {
                                         .beer(beerIterator.next())
                                         .orderQuantity(1)
                                         .build(),
+
                                 BeerOrderLine.builder()
                                         .beer(beerIterator.next())
                                         .orderQuantity(2)
@@ -83,7 +88,8 @@ public class BootstrapData implements CommandLineRunner {
                         )).build());
             });
 
-            val orders = beerOrderRepository.findAll();
+            int totalCustomer = customers.size();
+            log.info("loaded {} BeerOrders to {} Customers ", beerOrderRepository.count(),totalCustomer);
         }
 
 
@@ -107,6 +113,7 @@ public class BootstrapData implements CommandLineRunner {
                     case "Saison / Farmhouse Ale" -> BeerStyle.SAISON;
                     case "Fruit / Vegetable Beer", "Winter Warmer", "Berliner Weissbier" -> BeerStyle.WHEAT;
                     case "English Pale Ale" -> BeerStyle.PALE_ALE;
+                    case "Gose" -> BeerStyle.GOSE;
                     default -> BeerStyle.PILSNER;
                 };
 
@@ -118,6 +125,9 @@ public class BootstrapData implements CommandLineRunner {
                                 .quantityOnHand(beerCSVRecord.getCount())
                         .build());
             });
+
+            log.info("loaded {} Beers from CSV-File ", recs.size());
+            log.info("total Beers loaded: {}", beerRepository.count());
         }
     }
 
@@ -153,9 +163,10 @@ public class BootstrapData implements CommandLineRunner {
                     .updateDate(LocalDateTime.now())
                     .build();
 
-            beerRepository.save(beer1);
-            beerRepository.save(beer2);
-            beerRepository.save(beer3);
+            List<Beer> additionalBeers = List.of(beer1, beer2, beer3);
+            beerRepository.saveAll(additionalBeers);
+
+            log.info("loaded {} Beers manually", additionalBeers.size());
         }
 
     }
@@ -187,7 +198,10 @@ public class BootstrapData implements CommandLineRunner {
                     .updateDate(LocalDateTime.now())
                     .build();
 
-            customerRepository.saveAll(Arrays.asList(customer1, customer2, customer3));
+            List<Customer> customers = List.of(customer1, customer2, customer3);
+            customerRepository.saveAll(customers);
+
+            log.info("loaded {} Customers",customers.size());
         }
 
     }
